fix support page results alignment

--- a/src/components/SupportPageTemplate/style.module.scss
+++ b/src/components/SupportPageTemplate/style.module.scss
@@ -112,6 +112,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   a {
     color: #eb3349;
   }
